fix: fix the style of layout issues

--- a/apps/kennisbank-frontend/src/components/CategoryButtons/styles.css
+++ b/apps/kennisbank-frontend/src/components/CategoryButtons/styles.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   margin-block: 1rem;
-  align-items: center;
 }
 
 .frameless-category-buttons__nav {
